# scratch3-ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: demo.rviz
examples/: cup_demo.sb3  tork_ik_example.sb3
launch/: demo.launch  tabletop_detection.launch
scripts/: moveit_server.py
