<?xml version="1.0"?>
<package format="2">
  <name>scratch3-ros</name>
  <version>0.0.0</version>
  <description>The scratch3-ros package</description>

  <maintainer email="affonso@jsk.imi.i.u-tokyo.ac.jp">affonso</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>
  <exec_depend>jsk_pcl_ros_utils</exec_depend>

</package>
